[package]
name = "netweb"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netsim = { path = "../netsim", features = ["serde"] }
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yewdux = { git = "https://github.com/intendednull/yewdux.git", rev = "7b50745" }
yew-lucide = { path = "./yew-lucide" }
web-sys = { version = "0.3", features = [ "HtmlDivElement", "SvgGraphicsElement", "SvgRect", "Window", "KeyboardEvent", "Document", "Element", "HtmlElement", "FileList", "FileReader", "Blob", "ProgressEvent" ] }
js-sys = "0.3"
log = "0.4.17"
wasm-logger = "0.2.0"
ordered-float = "3.0.0"
getrandom = { version = "0.2.7", features = [ "js" ] }
gloo-timers = "0.2.4"
gloo-utils = "0.1.4"
petgraph = "0.6"
itertools = "0.10"
wasm-bindgen = "0.2.81"
strum = "0.24"
strum_macros = "0.24"
forceatlas2 = { version = "0.4", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"