[package]
name = "netsim"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
undo = []
rand_queue = ["dep:rand", "dep:rand_distr", "dep:priority-queue"]
serde = ["dep:serde", "dep:serde_with", "petgraph/serde-1", "ordered-float/serde", "priority-queue?/serde"]

[dependencies]
thiserror = "1"
petgraph = "0.6"
log = "0.4"
itertools = "0.10"
ordered-float = "3.0.0"
lazy_static = "1.4.0"
priority-queue = { version = "1.2.2", optional = true }
rand = { version = "0.8.4", optional = true }
rand_distr = { version = "0.4.3", optional = true }
serde = { version = "1", features = [ "derive" ], optional = true }
serde_with = { version = "1.14", features = [], optional = true }
xmltree = "0.10"

[dev-dependencies]
rand = "0.8.4"
maplit = "1.0.2"
env_logger = "0.9.0"
pretty_assertions = "1.2.1"
