[package]
name = "netsim-web"
version = "0.7.3"
edition = "2021"

[features]
atomic_bgp = ["dep:atomic-command"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netsim = { path = "../netsim", features = ["serde"] }
atomic-command = { path = "../atomic-bgp/atomic-command", features = ["serde"], optional = true }
yew = { version = "0.19" }
yew-router = { version = "0.16" }
yewdux = { version = "0.8"}
yew-lucide = "0.91"
web-sys = { version = "0.3", features = [ "HtmlDivElement", "SvgGraphicsElement", "SvgRect", "Window", "KeyboardEvent", "Document", "Element", "HtmlElement", "FileList", "FileReader", "Blob", "ProgressEvent", "History"] }
js-sys = "0.3"
log = "0.4.17"
wasm-logger = "0.2.0"
ordered-float = "3.0.0"
getrandom = { version = "0.2.7", features = [ "js" ] }
gloo-timers = "0.2.4"
gloo-utils = "0.1.4"
petgraph = "0.6"
itertools = "0.10"
wasm-bindgen = "=0.2.83"
strum = "0.24"
strum_macros = "0.24"
forceatlas2 = { version = "0.4", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
miniz_oxide = "0.5"
base64 = "0.13"
