[package]
name = "bgpsim-macros"
version = "0.11.1"
edition = "2021"
license-file = "LICENSE"
description = "BGPSim Macros for generating networks conveniently"
homepage = "https://bgpsim.github.io"
repository = "https://github.com/nsg-ethz/bgpsim"
readme = "README.md"
keywords = ["bgp", "ospf", "routing", "network"]
categories = ["simulation"]

[lib]
name = "bgpsim_macros"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["extra-traits", "full"] }
ipnet = "2.7.0"

[dev-dependencies]
bgpsim = { path = "../bgpsim" }
