[package]
name = "yew-lucide"
version = "0.75.0"
authors = [
    "John Toohey <john_t@mailo.com>",
    "Pedro Ferreira <me.pedro.ferreira@gmail.com>",
    "Martin Molzer <ga65guy@mytum.de>",
]
categories = ["wasm", "web-programming"]
keywords = ["wasm", "yew", "lucide"]
description = "Yew components for Lucide icons"
license = "MIT"
readme = "./README.md"
repository = "https://gitlab.com/john_t/yew-lucide"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git" }
